# Patterns

./: Adapter.cpp  Bridge.cpp  Builder.cpp  CMakeLists.txt  ChainOfResponsibility.cpp  Command.cpp  Decorator.cpp  Facade.cpp  FactoryMethod.cpp  Flyweight.cpp  Mediator.cpp  Memento.cpp  Observer.cpp  Prototype.cpp  Prototype_with_template_args.cpp  Proxy.cpp  Singleton.cpp  State.cpp  Strategy.cpp  TemplateMethod.cpp  Visitor.cpp
