cmake_minimum_required(VERSION 3.22)
project(patterns)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-fconcepts -lpthread -pthread")

add_executable(strategy Strategy.cpp)
add_executable(decorator Decorator.cpp)
add_executable(factory_method FactoryMethod.cpp)
add_executable(bridge Bridge.cpp)
add_executable(visitor Visitor.cpp)
add_executable(builder Builder.cpp)
add_executable(prototype_with_template_args Prototype_with_template_args.cpp)
add_executable(singleton Singleton.cpp)
add_executable(adapter Adapter.cpp)
add_executable(facade Facade.cpp)
add_executable(flyweight Flyweight.cpp)
add_executable(proxy Proxy.cpp)
add_executable(chain_of_responsibility ChainOfResponsibility.cpp)
add_executable(command Command.cpp)
add_executable(mediator Mediator.cpp)
add_executable(memento Memento.cpp)
add_executable(observer Observer.cpp)
add_executable(state State.cpp)